# MLOps

./: .dvcignore  .gitignore  .pre-commit-config.yaml  README.md  Run.ps1  dataset.dvc  infer.py  model.dvc  pyproject.toml  train.py
.dvc/: config
config/: all_config.yaml  config_handler.py  config_types.py
mnist/: infer.py  train.py
mnist/src/: data.py  mnist_model.py  model.py  tools.py
src/: mnist_model.py
