[tool.poetry]
name = "mlops"
version = "1.0.0"
description = "MNIST recognition"
authors = ["BiscuitsLayer <vinogradov.so@phystech.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
torch = "^2.1.0"
torchvision = "^0.16.0"
matplotlib = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
