[tool.poetry]
name = "mnist"
version = "1.0.0"
description = "MNIST recognition"
authors = ["BiscuitsLayer <vinogradov.so@phystech.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^3.5.0"
fire = "^0.5.0"
dvc = "^3.36.1"
dvc-gdrive = "^3.0.0"
hydra-core = "^1.3.2"
lightning = "^2.1.3"
scikit-learn = "^1.3.2"
torch = {version = "^2.1.2+cu118", source = "pytorch"}
torchvision = {version = "^0.16.2+cu118", source = "pytorch"}
mlflow = "^2.9.2"
onnx = "^1.15.0"
onnxruntime = "^1.16.3"

[tool.poetry.group.dev.dependencies]
torch = "^2.1.0"
torchvision = "^0.16.0"
matplotlib = "^3.8.0"

[tool.poetry.scripts]
mnist_train = 'mnist.train:main'
mnist_infer = 'mnist.infer:main'

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
